make copy select functional

--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -4,7 +4,7 @@
 <script src="/static/scripts/problem_create.js" type="module"></script>
 <link rel="stylesheet" href="/static/styles/problem_create.css">
 <script>
-
+  const problems = {{problems | tojson}}
 </script>
 
 
@@ -45,10 +45,10 @@
             </div>
             <label for="prob_file" class="form-label">Upload a new problem file</label>
             <input type="file" name="file" class="form-control w-em mb-2" id="prob_file" ref="prob_file_select" @change="$refs.prob_id_select.value = null"/>
-            <label for="prob_select" class="form-label">Or use an already existing one</label>
+            <label for="prob_select" class="form-label">Or copy an already existing one</label>
             <select class="form-select w-em" id="prob_select" name="problem_id" @change="$refs.prob_file_select.value = null" ref="prob_id_select">
               <option selected :value="null"></option>
-              <option>Test</option>
+              <option v-for="(problem, id) in store.problems" :value="id">${problem.name}</option>
             </select>
             <div class="d-flex mt-3">
               <button class="btn btn-primary ms-auto" type="submit">Next</button>
