--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/static/styles/problem_create.css">
 <script>
   const problems = {{problems | tojson}}
+  const contexts = {{contexts | tojson}}
 </script>
 
 
@@ -32,7 +33,7 @@
           </li>
         </ul>
         <div class="card">
-          <form id="file_form" @submit.prevent="send_file" class="card-body" v-if="page == 0" novalidate>
+          <form v-if="page == 0" id="file_form" ref="file_form" class="card-body" @submit.prevent="send_file" novalidate>
             <h2 class="card-title mb-3">Problem file</h2>
             <div class="alert alert-danger" role="alert" v-if="error == 'missing'">
               Select either a problem file to upload, or an already existing problem to copy.
@@ -54,42 +55,79 @@
               <button class="btn btn-primary ms-auto" type="submit">Next</button>
             </div>
           </form>
-          <form id="other_form" @submit.prevent="send_all">
-            <div class="card-body" v-if="page == 1">
-              <h2 class="card-ttile">Documentation</h2>
-              <div class="mb-3">
-                <label for="prob_name" class="form-label">Name</label>
-                <input type="text" class="form-control w-em" name="name" id="prob_name" v-model="name"/>
-              </div>
-              <div class="mb-3">
-                <label for="desc_file" class="form-label">Description file</label>
-                <input type="file" name="file" name="description" class="form-control w-em" id="desc_file"/>
-              </div>
-              <div class="mb-3">
-                <label for="prob_schema" class="form-label">Problem schema</label>
-                <textarea class="form-control" name="problem_schema" id="prob_schema" rows="10" v-model="problem_schema"></textarea>
-              </div>
-              <label for="sol_schema" class="form-label">Solution schema</label>
-              <textarea class="form-control" name="solution_schema" id="sol_schema" rows="10" v-model="solution_schema"></textarea>
 
-              <div class="d-flex mt-3">
-                <button class="btn btn-secondary" @click="page--">Back</button>
-                <button class="btn btn-primary ms-auto" @click="page++">Next</button>
+
+          <form v-if="page == 1" id="docs_form" ref="docs_form" class="card-body" @submit.prevent="page++">
+            <h2 class="card-tile">Documentation</h2>
+            <div class="mb-3">
+              <label for="prob_name" class="form-label">Name</label>
+              <input type="text" class="form-control w-em" name="name" id="prob_name" v-model="name" required/>
+            </div>
+            <div class="mb-3">
+              <label for="desc_file" class="form-label">Description file</label>
+              <input type="file" name="description" class="form-control w-em" id="desc_file"/>
+            </div>
+            <div class="mb-3">
+              <label for="prob_schema" class="form-label">Problem schema</label>
+              <textarea class="form-control" name="problem_schema" id="prob_schema" rows="10" v-model="problem_schema"></textarea>
+            </div>
+            <label for="sol_schema" class="form-label">Solution schema</label>
+            <textarea class="form-control" name="solution_schema" id="sol_schema" rows="10" v-model="solution_schema"></textarea>
+
+            <div class="d-flex mt-3">
+              <button class="btn btn-secondary" @click="page--">Back</button>
+              <button class="btn btn-primary ms-auto" type="submit">Next</button>
+            </div>
+          </form>
+
+
+          <form v-if="page == 2" id="settings_form" ref="settings_form" class="card-body" @submit.prevent="page++">
+            <h2 class="card-tile">Settings</h2>
+            <div class="mb-3">
+              <label for="context_sel" class="form-label">Context</label>
+              <select class="form-select w-em" id="context_sel" name="context" required>
+                <option v-for="(context, id) in store.contexts" :value="id">${context.name}</option>
+              </select>
+              <div class="invalid-feedback">
               </div>
             </div>
-            <div class="card-body" v-if="page == 2">
-            
-              <div class="d-flex mt-3">
-                <button class="btn btn-secondary" @click="page--">Back</button>
-                <button class="btn btn-primary ms-auto" @click="page++">Next</button>
-              </div>
+            <div class="mb-3">
+              <label for="config_file" class="form-label">Config file</label>
+              <input type="file" name="config" class="form-control w-em" id="config_file" required/>
             </div>
-            <div class="card-body" v-if="page == 3">
+            <div class="mb-3">
+              <label for="start_time" class="form-label">Starting time</label>
+              <input type="datetime-local" name="file" name="start" class="form-control w-em" id="start_time"/>
+            </div>
+            <div class="mb-3">
+              <label for="end_time" class="form-label">Ending time</label>
+              <input type="datetime-local" name="end" class="form-control w-em" id="end_time"/>
+            </div>
+          
+            <div class="d-flex mt-3">
+              <button class="btn btn-secondary" @click="page--">Back</button>
+              <button class="btn btn-primary ms-auto" type="submit">Next</button>
+            </div>
+          </form>
+
+
+          <form v-if="page == 3" id="display_form" ref="display_form" class="card-body" @submit.prevent="send_all">
+            <div class="mb-3">
+              <label for="image_file" class="form-label">Thumbnail image</label>
+              <input type="file" name="image" class="form-control w-em" id="image_file"/>
+            </div>
+            <div class="mb-3">
+              <label for="short_desc" class="form-label">Short description</label>
+              <textarea class="form-control w-em" name="short_description" id="short_desc" rows="5"></textarea>
+            </div>
+            <div class="mb-3">
+              <label for="prob_col" class="form-label">Problem colour</label>
+              <input type="color" name="image" class="form-control form-control-color" id="prob_col"/>
+            </div>
             
-              <div class="d-flex mt-3">
-                <button class="btn btn-secondary" @click="page--">Back</button>
-                <button class="btn btn-success ms-auto" type="submit">Create</button>
-              </div>
+            <div class="d-flex mt-3">
+              <button class="btn btn-secondary" @click="page--">Back</button>
+              <button class="btn btn-success ms-auto" type="submit">Create</button>
             </div>
           </form>
         </div>
