--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -93,11 +93,11 @@
             </div>
             <div class="mb-3">
               <label for="config_file" class="form-label">Config file</label>
-              <input type="file" name="config" class="form-control w-em" id="config_file" required/>
+              <input type="file" name="config" class="form-control w-em" id="config_file"/>
             </div>
             <div class="mb-3">
               <label for="start_time" class="form-label">Starting time</label>
-              <input type="datetime-local" name="file" name="start" class="form-control w-em" id="start_time"/>
+              <input type="datetime-local" name="start" name="start" class="form-control w-em" id="start_time"/>
             </div>
             <div class="mb-3">
               <label for="end_time" class="form-label">Ending time</label>
@@ -122,7 +122,7 @@
             </div>
             <div class="mb-3">
               <label for="prob_col" class="form-label">Problem colour</label>
-              <input type="color" name="image" class="form-control form-control-color" id="prob_col"/>
+              <input type="color" name="colour" class="form-control form-control-color" id="prob_col"/>
             </div>
             
             <div class="d-flex mt-3">
