--- a/algobattle_web/templates/problems.jinja
+++ b/algobattle_web/templates/problems.jinja
@@ -10,7 +10,7 @@
 
 
 <script type="text/x-template" id="problem">
-  <div class="card" style="width: 18rem; height: 24rem;">
+  <div class="card m-2 border border-5" style="width: 18rem; height: 24rem;" :style="{borderColor: problem.colour + ' !important'}">
     <img v-if="problem.image" :src="image_url" class="card-img-top" style="height: 10rem; object-fit: contain" :alt="problem.image.alt">
     <div class="card-body">
       <h5 class="card-title">${problem.name}</h5>
@@ -24,10 +24,10 @@
 <div id="app" v-cloak>
   {% if user.is_admin %}
   <h3>Upcoming</h3>
-  <div class="d-flex flex-wrap">
+  <div class="d-flex flex-wrap mb-5">
     <problem v-for="(problem, id) in future_problems" :problem="problem" :key="id"></problem>
     <div class="card border border-success-subtle" style="width: 18rem; height: 24rem;">
-      <img src="/static/images/default_problem.png" style="height: 10rem; object-fit: contain" class="card-img-top" alt="">
+      <img src="/static/images/default_problem.png" style="height: 10.125rem; object-fit: contain" class="card-img-top" alt="">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-auto">New problem</h5>
         <a href="/problems/create" class="btn btn-success mt-auto">Create</a>
@@ -36,7 +36,7 @@
   </div>
   {% endif %}
   <h3 v-if="Object.keys(current_problems).length != 0">Current</h3>
-  <div class="d-flex flex-wrap">
+  <div class="d-flex flex-wrap mb-5">
     <problem v-for="(problem, id) in current_problems" :problem="problem" :key="id"></problem>
   </div>
   <h3 v-if="Object.keys(past_problems).length != 0">Past</h3>
