--- a/algobattle_web/templates/problems.jinja
+++ b/algobattle_web/templates/problems.jinja
@@ -12,10 +12,10 @@
 <script type="text/x-template" id="problem">
   <div class="card m-2 border border-5" style="width: 18rem; height: 24rem;" :style="{borderColor: problem.colour + ' !important'}">
     <img v-if="problem.image" :src="image_url" class="card-img-top" style="height: 10rem; object-fit: contain" :alt="problem.image.alt">
-    <div class="card-body">
+    <div class="card-body d-flex flex-column">
       <h5 class="card-title">${problem.name}</h5>
       <p class="card-text overflow-hidden">${problem.short_description}</p>
-      <a :href="problem_url" class="btn btn-primary">View details</a>
+      <a :href="problem_url" class="btn btn-primary mt-auto stretched-link">View details</a>
     </div>
   </div>
 </script>
@@ -38,7 +38,7 @@
       <img src="/static/images/default_problem.png" style="height: 10.125rem; object-fit: contain" class="card-img-top" alt="">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-auto">New problem</h5>
-        <a href="/problems/create" class="btn btn-success mt-auto">Create</a>
+        <a href="/problems/create" class="btn btn-success mt-auto stretched-link">Create</a>
       </div>
     </div>
   </div>
