--- a/algobattle_web/templates/problems.jinja
+++ b/algobattle_web/templates/problems.jinja
@@ -34,7 +34,7 @@
   <h3>Upcoming</h3>
   <div class="d-flex flex-wrap mb-5">
     <problem v-for="(problem, id) in future_problems" :problem="problem" :key="id"></problem>
-    <div class="card border border-success-subtle" style="width: 18rem; height: 24rem;">
+    <div class="card border border-success-subtle m-2" style="width: 18rem; height: 24rem;">
       <img src="/static/images/default_problem.png" style="height: 10.125rem; object-fit: contain" class="card-img-top" alt="">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-auto">New problem</h5>
