--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -115,21 +115,39 @@
 
 
           <form v-if="page == 3" id="display_form" ref="display_form" class="card-body" @submit.prevent="send_all">
-            <h2 class="card-tile">Display</h2>
-            <div class="alert alert-danger" role="alert" v-if="error == 'server'">
-              There was an error when processing the submitted data.
-            </div>
-            <div class="mb-3">
-              <label for="image_file" class="form-label">Thumbnail image</label>
-              <input type="file" name="image" class="form-control w-em" id="image_file"/>
-            </div>
-            <div class="mb-3">
-              <label for="short_desc" class="form-label">Short description</label>
-              <textarea class="form-control w-em" name="short_description" id="short_desc" rows="5"></textarea>
-            </div>
-            <div class="mb-3">
-              <label for="prob_col" class="form-label">Problem colour</label>
-              <input type="color" name="colour" class="form-control form-control-color" id="prob_col"/>
+            <h2 class="card-tile">Customize problem card</h2>
+            <div class="row">
+              <div class="col-5">
+                <div class="alert alert-danger" role="alert" v-if="error == 'server'">
+                  There was an error when processing the submitted data.
+                </div>
+                <div class="mb-3">
+                  <label for="image_file" class="form-label">Thumbnail image</label>
+                  <input type="file" name="image" class="form-control w-em" id="image_file" @change="file_change"/>
+                </div>
+                <div class="mb-3">
+                  <label for="short_desc" class="form-label">Thumbnail alt text</label>
+                  <textarea class="form-control w-em" name="alt_text" id="alt_text" rows="5" v-model="img_alt"></textarea>
+                </div>
+                <div class="mb-3">
+                  <label for="short_desc" class="form-label">Short description</label>
+                  <textarea class="form-control w-em" name="short_description" id="short_desc" rows="5" v-model="short_desc"></textarea>
+                </div>
+                <div class="mb-3">
+                  <label for="prob_col" class="form-label">Problem colour</label>
+                  <input type="color" name="colour" class="form-control form-control-color" id="prob_col" v-model="color"/>
+                </div>
+              </div>
+              <div class="col-7">
+                <div class="card m-2 border border-5" style="width: 18rem; height: 24rem;" :style="{borderColor: color + ' !important'}">
+                  <img v-if="img_file" :src="img_url" class="card-img-top object-fit-cover" style="height: 10.125rem" :style="{backgroundColor: color + ' !important'}" :alt="img_alt">
+                  <div class="card-body d-flex flex-column" style="height: 13.5rem">
+                    <h5 class="card-title">${name}</h5>
+                    <p class="card-text overflow-hidden">${short_desc}</p>
+                    <a class="btn btn-sm btn-primary mt-auto disabled" aria-disabled="true">View details</a>
+                  </div>
+                </div>
+              </div>
             </div>
             
             <div class="d-flex mt-3">
