--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -34,7 +34,6 @@
         </ul>
         <div class="card">
           <form v-if="page == 0" id="file_form" ref="file_form" class="card-body" @submit.prevent="send_file" novalidate>
-            <h2 class="card-title mb-3">Problem file</h2>
             <div class="alert alert-danger" role="alert" v-if="error == 'missing'">
               Select either a problem file to upload, or an already existing problem to copy.
             </div>
@@ -58,7 +57,6 @@
 
 
           <form v-if="page == 1" id="settings_form" ref="settings_form" class="card-body" @submit.prevent="next('settings_form')">
-            <h2 class="card-tile">Settings</h2>
             <div class="mb-3">
               <label for="context_sel" class="form-label">Context</label>
               <select class="form-select w-em" id="context_sel" name="context" required v-model="context" @change="check_name">
@@ -95,7 +93,6 @@
 
 
           <form v-if="page == 2" id="docs_form" ref="docs_form" class="card-body" @submit.prevent="next('docs_form')">
-            <h2 class="card-tile">Documentation</h2>
             <div class="mb-3">
               <label for="desc_file" class="form-label">Description file</label>
               <input type="file" name="description" class="form-control w-em" id="desc_file"/>
@@ -115,7 +112,6 @@
 
 
           <form v-if="page == 3" id="display_form" ref="display_form" class="card-body" @submit.prevent="send_all">
-            <h2 class="card-tile">Customize problem card</h2>
             <div class="row">
               <div class="col-5">
                 <div class="alert alert-danger" role="alert" v-if="error == 'server'">
@@ -139,6 +135,7 @@
                 </div>
               </div>
               <div class="col-7">
+                <h3>Problem card</h3>
                 <div class="card m-2 border border-5" style="width: 18rem; height: 24rem;" :style="{borderColor: color + ' !important'}">
                   <img v-if="img_file" :src="img_url" class="card-img-top object-fit-cover" style="height: 10.125rem" :style="{backgroundColor: color + ' !important'}" :alt="img_alt">
                   <div class="card-body d-flex flex-column" style="height: 13.5rem">
