--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -32,7 +32,7 @@
       {% if description == "__DOWNLOAD_BUTTON__" %}
         <a role="button" class="btn btn-primary btn-sm" :href="problem.description.location" title="Download file">Download description file <i class="bi bi-download ms-1"></i></a>
       {% elif description is not none %}
-        {{ description }}
+        {{ description | safe }}
       {% endif %}
     </template>
     <h4 id="details" class="mt-5">Details</h4>
