--- a/algobattle_web/templates/problem_create.jinja
+++ b/algobattle_web/templates/problem_create.jinja
@@ -135,7 +135,7 @@
                 </div>
               </div>
               <div class="col-7">
-                <h3>Problem card</h3>
+                <h3>Card preview</h3>
                 <div class="card m-2 border border-5" style="width: 18rem; height: 24rem;" :style="{borderColor: color + ' !important'}">
                   <img v-if="img_file" :src="img_url" class="card-img-top object-fit-cover" style="height: 10.125rem" :style="{backgroundColor: color + ' !important'}" :alt="img_alt">
                   <div class="card-body d-flex flex-column" style="height: 13.5rem">
