--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -4,6 +4,7 @@
 <script src="/static/scripts/problem_detail.js" type="module"></script>
 <script>
   const problem = {{problem | tojson}}
+  const contexts = {{contexts | tojson}}
 </script>
 
 
@@ -36,8 +37,20 @@
       {% endif %}
     </template>
     <h4 id="details" class="mt-5">Details</h4>
-    <p>
-      desc
+    <p class="row">
+      <ul class="list-group list-group-flush bg-body-tertiary w-em">
+        <li v-if="problem.start" class="list-group-item bg-body-tertiary">Start: ${fmt_date(problem.start)}</li>
+        <li v-if="problem.end" class="list-group-item bg-body-tertiary">End: ${fmt_date(problem.end)}</li>
+        {% if user.is_admin %}
+        <li class="list-group-item bg-body-tertiary">Context: ${store.contexts[problem.context].name}</li>
+        {% endif %}
+        <li class="list-group-item bg-body-tertiary">
+          <a role="button" class="btn btn-primary btn-sm" :href="problem.file.location" title="Download problem file">Download problem file <i class="bi bi-download ms-1"></i></a>
+        </li>
+        <li class="list-group-item bg-body-tertiary">
+          <a role="button" class="btn btn-primary btn-sm" :href="problem.config.location" title="Download config file">Download config file <i class="bi bi-download ms-1"></i></a>
+        </li>
+      </ul>
     </p>
     <template v-if="problem.problem_schema">
       <h4 id="problem_schema" class="mt-5">Problem schema</h4>
