--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -50,6 +50,9 @@
         <li class="list-group-item bg-body-tertiary">
           <a role="button" class="btn btn-primary btn-sm" :href="problem.config.location" title="Download config file">Download config file <i class="bi bi-download ms-1"></i></a>
         </li>
+        <li class="list-group-item bg-body-tertiary">
+          <a role="button" class="btn btn-primary btn-sm" :href="`/api/problem/${problem.id}/download_all`" title="Download all files">Download all files <i class="bi bi-download ms-1"></i></a>
+        </li>
       </ul>
     </p>
     <template v-if="problem.problem_schema">
