--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -10,7 +10,11 @@
 
 <div id="app" v-cloak>
   <nav id="navbar" class="navbar bg-body-tertiary px-3 mb-3 sticky-top" style="top: 62px">
-    <a class="navbar-brand" href="#">${problem.name}</a>
+    <a class="navbar-brand" href="#">
+      ${problem.name} {% if user.is_admin %}
+          (${store.contexts[problem.context].name})
+        {% endif %}
+    </a>
     <ul class="nav nav-pills">
       <li v-if="problem.description" class="nav-item">
         <a class="nav-link" href="#description">Description</a>
@@ -41,9 +45,6 @@
       <ul class="list-group list-group-flush bg-body-tertiary w-em">
         <li v-if="problem.start" class="list-group-item bg-body-tertiary">Start: ${fmt_date(problem.start)}</li>
         <li v-if="problem.end" class="list-group-item bg-body-tertiary">End: ${fmt_date(problem.end)}</li>
-        {% if user.is_admin %}
-        <li class="list-group-item bg-body-tertiary">Context: ${store.contexts[problem.context].name}</li>
-        {% endif %}
         <li class="list-group-item bg-body-tertiary">
           <a role="button" class="btn btn-primary btn-sm" :href="problem.file.location" title="Download problem file">Download problem file <i class="bi bi-download ms-1"></i></a>
         </li>
