edit persistence fix

--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -179,7 +179,7 @@
     </template>
   </div>
 
-  <edit-window :problem="edit_data" :modal="modal"></edit-window>
+  <edit-window :problem="edit_data" :modal="modal" @new_problem="new_problem"></edit-window>
 </div>
 
 
