--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -144,11 +144,11 @@
     <img v-if="problem.image" :src="problem.image.location" :alt="problem.image.alt_text" class="object-fit-cover border rounded mb-4" style="width: 100%;">
     <template v-if="problem.description">
       <h4 id="description" class="mt-5">Description</h4>
-      {% if description == "__DOWNLOAD_BUTTON__" %}
-        <a role="button" class="btn btn-primary btn-sm" :href="problem.description.location" title="Download file">Download description file <i class="bi bi-download ms-1"></i></a>
-      {% elif description is not none %}
-        {{ description | safe }}
-      {% endif %}
+      <a v-if="description == '__DONWLOAD_BUTTON__'" role="button" class="btn btn-primary btn-sm" :href="problem.description.location" title="Download file">Download description file <i class="bi bi-download ms-1"></i></a>
+      <div v-else-if="description == '__ERROR__'" class="alert alert-danger" role="alert">
+        There was an error parsing the description file.
+      </div>
+      <div v-else v-html="description"></div>
     </template>
     <h4 id="details" class="mt-5">Details</h4>
     <p class="row">
