--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -156,16 +156,10 @@
         <li v-if="problem.start" class="list-group-item bg-body-tertiary">Start: ${fmt_date(problem.start)}</li>
         <li v-if="problem.end" class="list-group-item bg-body-tertiary">End: ${fmt_date(problem.end)}</li>
         <li class="list-group-item bg-body-tertiary">
-          <a role="button" class="btn btn-primary btn-sm" :href="problem.file.location" title="Download problem file">Download problem file <i class="bi bi-download ms-1"></i></a>
+          <a role="button" class="btn btn-primary btn-sm" :href="`/api/problem/${problem.id}/download_all`" title="Download problem files">Download problem files <i class="bi bi-download ms-1"></i></a>
         </li>
         <li class="list-group-item bg-body-tertiary">
-          <a role="button" class="btn btn-primary btn-sm" :href="problem.config.location" title="Download config file">Download config file <i class="bi bi-download ms-1"></i></a>
-        </li>
-        <li class="list-group-item bg-body-tertiary">
-          <a role="button" class="btn btn-primary btn-sm" :href="`/api/problem/${problem.id}/download_all`" title="Download all files">Download all files <i class="bi bi-download ms-1"></i></a>
-        </li>
-        <li class="list-group-item bg-body-tertiary">
-          <button role="button" class="btn btn-warning btn-sm" title="Edit problem" @click="open_modal">Edit <i class="bi bi-pencil ms-1"></i></a>
+          <button role="button" class="btn btn-warning btn-sm" title="Edit problem" @click="open_modal">Edit problem<i class="bi bi-pencil ms-1"></i></a>
         </li>
       </ul>
     </p>
