--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -25,7 +25,7 @@
 
 
 <script type="text/x-template" id="editWindow">
-  <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true" ref="user_modal">
+  <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
       <form class="modal-content" @submit.prevent="submit_edit">
         <div class="modal-header">
@@ -118,6 +118,34 @@
 </script>
 
 
+<script type="text/x-template" id="editDoc">
+  <div class="modal fade" id="docModal" tabindex="-1" aria-labelledby="docLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+      <form class="modal-content" @submit.prevent="upload_doc">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="docLabel">Edit documentation</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body row">
+
+          <label for="doc_upload" class="form-label mt-3">Select new file</label>
+          <input type="file" class="form-control w-em mb-2" id="doc_upload" ref="doc_file_select" @change="select_file"/>
+
+        </div>
+        <div class="modal-footer">
+          <button v-if="confirm_delete" type="button" class="btn btn-secondary" @click="confirm_delete = false">Cancel</button>
+          <button v-if="store.doc_file" type="button" class="btn btn-danger ms-2" @click="remove_doc">
+            ${confirm_delete ? "Confirm deletion" : "Delete documentation"}
+          </button>
+          <button type="button" class="btn btn-secondary ms-auto" data-bs-dismiss="modal">Discard</button>
+          <button type="submit" class="btn btn-primary">Upload</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</script>
+
+
 <div id="app" v-cloak>
   <nav id="navbar" class="navbar bg-body-tertiary px-3 mb-3 sticky-top" style="top: 62px">
     <a class="navbar-brand" href="#">
@@ -128,6 +156,9 @@
     <ul class="nav nav-pills">
       <li v-if="problem.description" class="nav-item">
         <a class="nav-link" href="#description">Description</a>
+      </li>
+      <li v-if="store.doc_file" class="nav-item">
+        <a class="nav-link" href="#documentation">Documentation</a>
       </li>
       <li v-if="problem.problem_schema" class="nav-item">
         <a class="nav-link" href="#problem_schema">Problem schema</a>
@@ -153,9 +184,16 @@
           <li class="list-group-item bg-body-tertiary">
             <a role="button" class="btn btn-primary btn-sm" :href="`/api/problem/${problem.id}/download_all`" title="Download problem files">Download problem files <i class="bi bi-download ms-1"></i></a>
           </li>
+          {% if user.is_admin %}
           <li class="list-group-item bg-body-tertiary">
             <button role="button" class="btn btn-warning btn-sm" title="Edit problem" @click="open_modal">Edit problem<i class="bi bi-pencil ms-1"></i></a>
           </li>
+          {% endif %}
+          {% if selected_team %}
+          <li class="list-group-item bg-body-tertiary">
+            <button role="button" class="btn btn-warning btn-sm" title="Edit documentation" @click="open_doc_modal">Edit documentation<i class="bi bi-pencil ms-1"></i></a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -167,6 +205,12 @@
       </div>
       <div v-else v-html="description"></div>
     </template>
+    <h4 id="documentation" class="mt-5">Documentation</h4>
+    {% if user.is_admin %}
+    
+    {% else %}
+    {% endif %}
+    <a v-if="store.doc_file" role="button" class="btn btn-primary btn-sm mb-3" :href="store.doc_file.location" title="Download documentation">Download documentation<i class="bi bi-download ms-1"></i></a>
     <template v-if="problem.problem_schema">
       <h4 id="problem_schema" class="mt-5">Problem schema</h4>
       <pre><code>${problem.problem_schema}</code></pre>
@@ -178,6 +222,7 @@
   </div>
 
   <edit-window :problem="edit_data" :modal="modal" @new_problem="new_problem"></edit-window>
+  <edit-doc :problem="problem" :modal="doc_modal"></edit-doc>
 </div>
 
 
