pass selected team

--- a/algobattle_web/templates/problem_detail.jinja
+++ b/algobattle_web/templates/problem_detail.jinja
@@ -5,6 +5,7 @@
 <script>
   const problem = {{problem | tojson}}
   const contexts = {{contexts | tojson}}
+  const selected_team = {{selected_team | tojson}}
 </script>
 
 
