--- a/frontend/src/assets/styles.scss
+++ b/frontend/src/assets/styles.scss
@@ -2,6 +2,11 @@
 @import "~bootstrap/scss/bootstrap";
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
+// bootstrap somhow seems to set this to a non zero value, which popper doesn't like
+.dropdown-menu {
+    margin: 0!important;
+}
+
 .w-es {
     max-width: 150px;
 }
