fix user create admin button

--- a/frontend/src/assets/styles.scss
+++ b/frontend/src/assets/styles.scss
@@ -33,6 +33,6 @@
     max-width: 300px;
 }
 
-.form-select:not(td .form-select), .form-control:not(td .form-control) {
+.inpu-group {
     margin-bottom: 1rem;
 }
