--- a/frontend/src/assets/styles.scss
+++ b/frontend/src/assets/styles.scss
@@ -33,6 +33,6 @@
     max-width: 300px;
 }
 
-.inpu-group {
+:is(.form-select, .form-control):not(:is(td, .input-group) :is(.form-select, .form-control)) {
     margin-bottom: 1rem;
 }
